Bugfix: pagination & filters visible when editing a single asset

--- a/media/boom-assets/css/boom.assets.css.less
+++ b/media/boom-assets/css/boom.assets.css.less
@@ -43,10 +43,6 @@
 	}
 
 	&-manager {
-		.b-assets-back {
-			display: none;
-		}
-
 		select {
 			margin-left: 40px;
 		}
